chore: ported to 1.20.6
Note: most non-FTB dependencies not ported yet